--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             Aspiring Software Developer seeking a challenging role to leverage my MCA degree and technical skills.
           </div>
 
-            <a href="https://drive.google.com/drive/folders/1APQR8H3Z6t5OVBpk92hOyCzVU7v0q442?usp=share_link"
+            <a href="https://drive.google.com/file/d/1i0YAcX5cIJ3jNhjUAEpqKJcdQ8oBF_LZ/view?usp=sharing"
               target="_blank">
               <button class="btn-pink">Hire Me</button></button>
             </a>
@@ -144,7 +144,7 @@
               <img class="project-skill" src="./images/stack/api.svg" alt="" />
             </div>
             <h2 class="project-heading">Weather Forecasting</h2>
-            <p class="project-sub-heading">
+            <p class="project-subHeading">
               A platform to find Weather infromation of selected location
               either <br />
               by GPS or manually entered location.
@@ -172,7 +172,7 @@
                         </div>
 
                         <h2 class="project-heading">Olympus Clone</h2>
-                        <p class="project-sub-heading">
+                        <p class="project-subHeading">
                             A front-end clone website of the Olympus.<br>Olympus is building OHM, a community-owned,
                             decentralized <br>and censorship-resistant reserve
                             currency that is asset-backed,<br> deeply liquid and used
@@ -425,6 +425,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/79362f16fc.js" crossorigin="anonymous"></script>
   </script>
   <script src="script.js"></script>
   <script src="main.js"></script>
