--- a/project/index.html
+++ b/project/index.html
@@ -178,36 +178,39 @@
     
     <footer>
         <div class="container">
-            <div class="footer-wrapper">
-                <div class="footer-faded-text">Made with <span class=""> ❤️ </span> by Bhavesh Kushwaha</div>
-
-                <div class="link-wrapper">
-                    <div>
-                        <a href="#projects">Projects</a>
-                    </div>
-                    <div>
-                        <a href="#skills">Skills</a>
-                    </div>
-                    <div>
-                        <a href="#contactme">Contact Me</a>
-                    </div>
-                </div>
-
-                <div class="icon-wrapper">
-                    <a href="https://www.linkedin.com/in/bhavesh-kushwaha-4a2373227/" target="_blank"><i class="fa-brands fa-linkedin icon"></i></a>
-                    <a href="https://github.com/BhavKush" target="_blank"><i class="fa-brands fa-github icon"></i></a>
-                    <a href="https://twitter.com/Bhavesh37154131" target="_blank"><i class="fa-brands fa-twitter icon"></i></a>
-                    <a href="https://instagram.com/kush_bhavesh?igshid=ZDdkNTZiNTM=" target="_blank"><i class="fa-brands fa-instagram icon"></i></a>
-                    <a href="mailto:kush.bhavesh15@gmail.com" target="_blank"><i class="fa-regular fa-envelope icon"></i></a>
-                </div>
-
+          <div class="footer-wrapper">
+            <div class="footer-faded-text">
+              &nbsp; &nbsp; &nbsp;  © 2024. All rights reserved by Bhavesh Kushwaha
             </div>
+  
+            <div class="link-wrapper">
+              <div>
+                <a href="#projects">Projects</a>
+              </div>
+              <div>
+                <a href="#skills">Skills</a>
+              </div>
+              <div>
+                <a href="#contactme">Contact Me</a>
+              </div>
+            </div>
+  
+            <div class="icon-wrapper">
+              <a href="https://www.linkedin.com/in/bhavesh-kushwaha-4a2373227/" target="_blank"><i
+                  class="fa-brands fa-linkedin icon"></i></a>
+              <a href="https://github.com/BhavKush" target="_blank"><i class="fa-brands fa-github icon"></i></a>
+              <a href="https://twitter.com/Bhavesh37154131" target="_blank"><i class="fa-brands fa-twitter icon"></i></a>
+              <a href="https://instagram.com/kush_bhavesh?igshid=ZDdkNTZiNTM=" target="_blank"><i
+                  class="fa-brands fa-instagram icon"></i></a>
+              <a href="mailto:kush.bhavesh15@gmail.com" target="_blank"><i class="fa-regular fa-envelope icon"></i></a>
+            </div>
+          </div>
         </div>
-    </footer>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
-
+    <script src="https://kit.fontawesome.com/79362f16fc.js" crossorigin="anonymous"></script>
     <script src="../script.js"></script>
 
 </body>
