--- a/project/indexM.html
+++ b/project/indexM.html
@@ -144,7 +144,7 @@
       <div class="container">
         <div class="footer-wrapper">
           <div class="footer-faded-text">
-            Made with <span class=""> ❤️ </span> by Bhavesh Kushwaha
+            &nbsp; &nbsp; &nbsp;  © 2024. All rights reserved by Bhavesh Kushwaha
           </div>
 
           <div class="link-wrapper">
@@ -160,25 +160,13 @@
           </div>
 
           <div class="icon-wrapper">
-            <a
-              href="https://www.linkedin.com/in/bhavesh-kushwaha-4a2373227/"
-              target="_blank"
-              ><i class="fa-brands fa-linkedin icon"></i
-            ></a>
-            <a href="https://github.com/BhavKush" target="_blank"
-              ><i class="fa-brands fa-github icon"></i
-            ></a>
-            <a href="https://twitter.com/Bhavesh37154131" target="_blank"
-              ><i class="fa-brands fa-twitter icon"></i
-            ></a>
-            <a
-              href="https://instagram.com/kush_bhavesh?igshid=ZDdkNTZiNTM="
-              target="_blank"
-              ><i class="fa-brands fa-instagram icon"></i
-            ></a>
-            <a href="mailto:kush.bhavesh15@gmail.com" target="_blank"
-              ><i class="fa-regular fa-envelope icon"></i
-            ></a>
+            <a href="https://www.linkedin.com/in/bhavesh-kushwaha-4a2373227/" target="_blank"><i
+                class="fa-brands fa-linkedin icon"></i></a>
+            <a href="https://github.com/BhavKush" target="_blank"><i class="fa-brands fa-github icon"></i></a>
+            <a href="https://twitter.com/Bhavesh37154131" target="_blank"><i class="fa-brands fa-twitter icon"></i></a>
+            <a href="https://instagram.com/kush_bhavesh?igshid=ZDdkNTZiNTM=" target="_blank"><i
+                class="fa-brands fa-instagram icon"></i></a>
+            <a href="mailto:kush.bhavesh15@gmail.com" target="_blank"><i class="fa-regular fa-envelope icon"></i></a>
           </div>
         </div>
       </div>
@@ -189,6 +177,7 @@
       src="https://kit.fontawesome.com/58a810656e.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://kit.fontawesome.com/79362f16fc.js" crossorigin="anonymous"></script>
 
     <script src="../script.js"></script>
   </body>
